--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-maps": "^0.30.1",
+    "react-native-maps-directions": "^1.8.0",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.2",
     "react-native-web": "0.17.1"
@@ -31,5 +33,17 @@
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0"
   },
-  "private": true
+  "private": true,
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/gsinghg19/GEEQ.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/gsinghg19/GEEQ/issues"
+  },
+  "homepage": "https://github.com/gsinghg19/GEEQ#readme",
+  "description": ""
 }
