--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-native-maps-directions": "^1.8.0",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.10.2",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "expo-location": "~14.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
